Correção do caminho dos arquivos js sobre array

--- a/teoria/array/substituir/index.html
+++ b/teoria/array/substituir/index.html
@@ -6,7 +6,7 @@
     <title>Trabalhando com array</title>
 </head>
 <body>
-    <h1>Cortando e concatenando elementos no array</h1>
-    <script src="../js/cortando_e_concatenando.js"></script>
+    <h1>Substituindo elementos do array</h1>
+    <script src="../js/substituir.js"></script>
 </body>
 </html>
