--- a/teoria/array/adicionar/index.html
+++ b/teoria/array/adicionar/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Adicionando elementos ao array</h1>
-    <script src="../../js/adicionar.js"></script>
+    <script src="../js/adicionar.js"></script>
 </body>
 </html>
