--- a/teoria/array/iterar/index.html
+++ b/teoria/array/iterar/index.html
@@ -6,7 +6,7 @@
     <title>Trabalhando com array</title>
 </head>
 <body>
-    <h1>Cortando e concatenando elementos no array</h1>
-    <script src="../js/cortando_e_concatenando.js"></script>
+    <h1>Iterando sobre elementos do array</h1>
+    <script src="../js/iterar.js"></script>
 </body>
 </html>
