--- a/teoria/array/pesquisar/index.html
+++ b/teoria/array/pesquisar/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Pesquisando elementos no array</h1>
-    <script src="../../js/pesquisar.js"></script>
+    <script src="../js/pesquisar.js"></script>
 </body>
 </html>
