--- a/teoria/array/remover/index.html
+++ b/teoria/array/remover/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Removendo elementos do array</h1>
-    <script src="../../js/remover.js"></script>
+    <script src="../js/remover.js"></script>
 </body>
 </html>
