Estrutura do exemplo da teoria de high order function com array

--- a/teoria/funcoes/high_order_array/index.html
+++ b/teoria/funcoes/high_order_array/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Teoria high-order functions e array</h1>
+    <script src="../js/highOrderArray.js"></script>
 </body>
 </html>
