Praticando manipulacao no dom

--- a/teoria/dom/manipulando_dom/index.html
+++ b/teoria/dom/manipulando_dom/index.html
@@ -15,6 +15,8 @@
     <button onclick="addContact()">Novo Contato</button>
     <button onclick="removeContact()">Remover Contato</button>
 
-    <div id="contacts-list"></div>
+    <div id="contacts-list">
+        <hr>
+    </div>
 </body>
 </html>
